# rss-notifier

./: .gitignore  Cargo.toml  build.rs
frontend/: .env.development  .gitignore  README.md  package.json  svelte.config.js
frontend/src/lib/: FeedDialog.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/table/: table-cell.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  schema.ts
frontend/src/types/: feed.ts  index.ts
migrations/: 20241123212411_initial.sql  20241128174649_add_smtpsettings.sql  20241130085214_smtpsettings_remove_from_name.sql  20241130103009_remove_smtpsettings.sql
src/: main.rs
