[package]
name = "rss-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "derive",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

