[package]
name = "rss-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = "0.7.9"
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
reqwest = "0.12.9"
rss = { version = "2.0.11", features = ["validation"] }
mail-send = "0.4.9"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "derive",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

